@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-19T08:08:30Z",
-  "count_outdated" : 4919,
-  "uniques_outdated" : 1468,
+  "timestamp" : "2023-08-20T00:36:26Z",
+  "count_outdated" : 4925,
+  "uniques_outdated" : 1474,
   "count" : 5037,
   "uniques" : 1550,
   "clones" : [
-    {
-      "timestamp": "2023-08-05T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 1, 6 ],
-      "count_decinc": [ 1, 6 ],
-      "uniques": 5,
-      "uniques_minmax": [ 1, 6 ],
-      "uniques_decinc": [ 1, 6 ]
-    },
     {
       "timestamp": "2023-08-06T00:00:00Z",
       "count": 1,
