@@ -1,3 +1,12 @@
+2023-08-20T00:36:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5914366714 # 1832
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-20
+* notice: last 14d: unq all: 58 112
+* notice: prev accum: outdated-unq outdated-all / unq all: 1468 4919 / 1550 5037
+* notice: next accum: outdated-unq outdated-all / unq all: 1474 4925 / 1550 5037
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-08-05] / []
+
 2023-08-19T08:08:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5910326487 # 1830
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-19
